[gd_scene load_steps=4 format=3 uid="uid://djkux0g6wbahj"]

[ext_resource type="Script" uid="uid://cttx04ppbtdhb" path="res://scripts/enemy_bullet.gd" id="1_qx7rs"]
[ext_resource type="Texture2D" uid="uid://qw83xi8stsp7" path="res://icon.svg" id="2_38r62"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mkf8s"]
radius = 24.101616

[node name="EnemyBullet" type="Area2D"]
scale = Vector2(0.5078125, 0.2109375)
script = ExtResource("1_qx7rs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mkf8s")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_38r62")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="visibility_changed" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_visibility_changed"]
